fix:serivces text overflow

--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ body {
   flex-flow: column;
   background-color: rgb(234,219,202);
   padding: 30px 20px;
-  flex:1 1 0;
+  flex:1 0 100%;
   max-width: 250px;
     
 }
@@ -501,7 +501,7 @@ justify-content: center;
  }
 
 .bg-services, .bg-gallery, .bg-contact{
-  font-size: 80px;
+  font-size: 60px;
   margin-left: 0
   ;
 }
@@ -534,7 +534,9 @@ justify-content: center;
 }
 
 .contact-details li {
-  font-size: 18px;
+  font-size: 14px;
+  padding:0;
+  margin:0;
 }
 
 }
